--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -34,10 +34,10 @@
 	    </center>
         <div id="wrap">
             <div id="text">
-                <div id="diary">
+                <!--<div id="diary">
                     <button onclick="previous()">Trước</button>
                     <button onclick="next()">Sau</button>
-                </div>
+                </div>-->
 		        <div id="code">
                 
                     <p>
@@ -234,7 +234,7 @@
 	    iframe.height = "1";
 	    document.getElementById("playlist").appendChild(iframe);
     </script>
-    <script type="text/javascript">
+    <!--<script type="text/javascript">
         var here = 2; //latest letter
         funtion appendDiary{
             var iframe = document.createElement('iframe');
@@ -257,6 +257,6 @@
             iframe.src = window.location.href + "diary/" + here + ".html";
             iframe.contentWindow.location.reload();
         }
-    </script>
+    </script>-->
 </body>
 </html>
