--- a/kt/mylove/diary/1.html
+++ b/kt/mylove/diary/1.html
@@ -1,24 +1,22 @@
-<p>
-    <font color="#0000FF">
-        <span class="say">Em này, </span><br>
-		<span class="say"> </span><br>
-		<span class="say">^_^ Em là người con gái anh yêu !! </span><br>
-		<span class="say">Không phải chỉ bởi.. </span><br>
-		<span class="say">Em xinh đẹp đến nỗi anh như bị sét tình đánh, </span><br>
-		<span class="say">Hay những biểu cảm đáng yêu kia, </span><br>
-		<span class="say">..em dành cho anh !! </span><br>
-     	<span class="say"> </span><br>
-      	<span class="say">..mà còn bởi.. </span><br>
-      	<span class="say">Em hiểu anh !! </span><br>
-		<span class="say">Em quan tâm anh !! </span><br>						
-		<span class="say">Em làm tình làm tội anh >.< </span><br>
-		<span class="say">Em khiến anh yêu em từ ngày này sang ngày kia.. </span><br>
-		<span class="say">..cũng cắn,cấu,xé bầm anh ngày này qua ngày khác </span><br>
-		<span class="say"> </span><br>
-			<span class="say">Em là một điều kỳ lạ nhất từng xuất hiện trong anh </span><br>
-        <span class="say">Vậy hãy cứ tin em nhé.. </span><br>
-  		<span class="say">"Rồi đây e cũng sẽ phải về ở đợ nhà anh" </span><br>
-        <span class="say"> </span><br>
-        <span class="say"><span class="space"></span>-- Yêu em thật nhiều.. moazzz :*</span>
-    </font>
-</p>
+<p><font color="#0000FF">
+    <span class="say">Em này, </span><br>
+    <span class="say"> </span><br>
+    <span class="say">^_^ Em là người con gái anh yêu !! </span><br>
+    <span class="say">Không phải chỉ bởi.. </span><br>
+    <span class="say">Em xinh đẹp đến nỗi anh như bị sét tình đánh, </span><br>
+    <span class="say">Hay những biểu cảm đáng yêu kia, </span><br>
+    <span class="say">..em dành cho anh !! </span><br>
+    <span class="say"> </span><br>
+    <span class="say">..mà còn bởi.. </span><br>
+    <span class="say">Em hiểu anh !! </span><br>
+    <span class="say">Em quan tâm anh !! </span><br>
+    <span class="say">Em làm tình làm tội anh >.< </span><br>
+    <span class="say">Em khiến anh yêu em từ ngày này sang ngày kia.. </span><br>
+    <span class="say">..cũng cắn,cấu,xé bầm anh ngày này qua ngày khác </span><br>
+    <span class="say"> </span><br>
+    <span class="say">Em là một điều kỳ lạ nhất từng xuất hiện trong anh </span><br>
+    <span class="say">Vậy hãy cứ tin em nhé.. </span><br>
+    <span class="say">"Rồi đây e cũng sẽ phải về ở đợ nhà anh" </span><br>
+    <span class="say"> </span><br>
+    <span class="say"><span class="space"></span>-- Yêu em thật nhiều.. moazzz :*</span>
+</font></p>
