--- a/kt/mylove/diary/2.html
+++ b/kt/mylove/diary/2.html
@@ -1,4 +1,4 @@
-<p><font color="#FF0000">
+<p><font color="#0000FF">
     <span class="say">Em này, </span><br>
     <span class="say"> </span><br>
     <span class="say">^_^ Em là người con gái anh yêu !! </span><br>
