--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
       <section id="main_content">
         <h3>
           <a id="welcome-to-projects" class="anchor" href="#welcome-to-projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Projects</h3>
-        <p><a href="projects/gioithieunganh">Đồ án môn học Giới thiệu ngành</a></p>
+        <p><a href="projects/wakeuplight.html">Wake up light</a></p>
       </section>
 </div>
     
