--- a/projects/wakeuplight.html
+++ b/projects/wakeuplight.html
@@ -141,7 +141,7 @@
 							<input id="btn" type="button" name="setAlarm" value="Set alarm">
 						</td>
 					</table>
-					<p>Power by npc.Argus</p>
+					<p>Powered by npc.Argus</p>
 				</div>
 			</div>
 			<div id="player">
