--- a/projects/wakeuplight.html
+++ b/projects/wakeuplight.html
@@ -107,7 +107,7 @@
 		}
 		function mp3Playlist(){
             var iframe = $("iframe");
-            var url = "http://mp3.zing.vn/embed/album/ZWZCWCEA?start=true";
+            var url = "https://mp3.zing.vn/embed/album/ZWZCWCEA?start=true";
             //&index="+Math.floor((Math.random() * 57) + 0);
             iframe.attr("src",url);
             iframe.reload;
@@ -145,7 +145,7 @@
 				</div>
 			</div>
 			<div id="player">
-				<iframe scrolling="no" width="600" height="250" src="http://mp3.zing.vn/embed/album/ZOBIZWCB?start=true" frameborder="0" allowfullscreen="true"></iframe>
+				<iframe scrolling="no" width="600" height="250" src="https://mp3.zing.vn/embed/album/ZOBIZWCB?start=true" frameborder="0" allowfullscreen="true"></iframe>
 	        </div>
 		</td></tr>
 		<tr><td style="padding-top:100px">
