--- a/projects/wakeuplight.html
+++ b/projects/wakeuplight.html
@@ -145,7 +145,7 @@
 				</div>
 			</div>
 			<div id="player">
-				<iframe scrolling="no" width="600" height="250" src="https://mp3.zing.vn/embed/album/ZOBIZWCB?start=true" frameborder="0" allowfullscreen="true"></iframe>
+				<iframe scrolling="no" width="600" height="250" src="https://mp3.zing.vn/embed/album/ZOUUF7E6?start=true" frameborder="0" allowfullscreen="true"></iframe>
 	        </div>
 		</td></tr>
 		<tr><td style="padding-top:100px">
