--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -78,6 +78,7 @@
             var iframe = document.getElementById('diary');            
             iframe.src = "./diary/" + here.toString() + ".html";
             iframe.reload;
+            setRandomColor();
             var code = $("#code");
             code.hide();
             code.html($("#diary").contents().find("body").html());
@@ -91,6 +92,7 @@
             var iframe = document.getElementById('diary');
             iframe.src = "./diary/" + here.toString() + ".html";
             iframe.reload;
+            setRandomColor();
             var code = $("#code");
             code.hide();
             code.html($("#diary").contents().find("body").html());
@@ -100,6 +102,19 @@
                 document.getElementById('previous').disabled=true;}).typewriter();
         }
     </script>
+    <script>
+        function getRandomColor() {
+            var letters = '0123456789ABCDEF';
+            var color = '#';
+            for (var i = 0; i < 6; i++) {
+                color += letters[Math.floor(Math.random() * 16)];
+            }
+            return color;
+        }
+        
+        function setRandomColor() {
+            $("p").css("font-color", getRandomColor());
+        }
     <script>
         (function(){
             var canvas = $('#canvas');
