--- a/kt/mylove/diary/1.html
+++ b/kt/mylove/diary/1.html
@@ -1,4 +1,4 @@
-<p><font color="#0000FF">
+<p id="txtDiary">
     <span class="say">Em này, </span><br>
     <span class="say"> </span><br>
     <span class="say">^_^ Em là người con gái anh yêu !! </span><br>
@@ -19,4 +19,4 @@
     <span class="say">"Rồi đây e cũng sẽ phải về ở đợ nhà anh" </span><br>
     <span class="say"> </span><br>
     <span class="say"><span class="space"></span>-- Yêu em thật nhiều.. moazzz :*</span>
-</font></p>
+</p>
