--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -82,7 +82,12 @@
             return color;
         }
         function setRandomColor() {
-            $("#txtDiary").css("font-color", getRandomColor());
+            var x = document.getElementById("diary");
+            var y = (x.contentWindow || x.contentDocument);
+            if (y.document)y = y.document;
+            y.body.p.style.font-color = getRandomColor();
+            
+            //$("#txtDiary").css("font-color", getRandomColor());
         }
         function previous(){
             here--;
