--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -85,7 +85,7 @@
             var x = document.getElementById("diary");
             var y = (x.contentWindow || x.contentDocument);
             if (y.document)y = y.document;
-            y.body.p.style.font-color = getRandomColor();
+            y.body.p.style.color = getRandomColor();
             
             //$("#txtDiary").css("font-color", getRandomColor());
         }
