--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -33,8 +33,8 @@
         <div id="wrap">
             <div id="text">
                 <div id="nav">
-                    <button id="previous" onclick="previous()" style="float: left;">Trước</button>
-                    <button id="next" onclick="next()" style="float: right;" disabled>Sau</button>
+                    <button id="previous" onclick="previous();" style="float: left;">Trước</button>
+                    <button id="next" onclick="next();" style="float: right;" disabled >Sau</button>
                 </div><br>
                 <div id="code">
                     <p>This is placeholder</p>
@@ -55,7 +55,7 @@
             iframe.src = url;
             iframe.frameBorder = 0;
             iframe.width = "90%";
-            iframe.height = "100";
+            iframe.height = "10%";
             document.getElementById("playlist").appendChild(iframe);
         })();
     </script>
