--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -111,9 +111,9 @@
             code.hide();
             code.html($("#diary").contents().find("body").html());
             code.show("fast",function(){
-            document.getElementById('next').disabled=false;
-            if(here <= 1)
-                document.getElementById('previous').disabled=true;}).typewriter();
+            document.getElementById('previous').disabled=false;
+            if(here >= latest)
+                document.getElementById('next').disabled=true;}).typewriter();
         }
     </script>        
     <script>
