--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -34,7 +34,7 @@
             <div id="text">
                 <div id="nav">
                     <button id="previous" onclick="previous();" style="float: left;">Trước</button>
-                    <button id="next" onclick="next();" style="float: right;" disabled >Sau</button>
+                    <button id="next" onclick="next();" style="float: right;" disabled !important >Sau</button>
                 </div><br>
                 <div id="code">
                     <p>This is placeholder</p>
