--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -33,8 +33,8 @@
         <div id="wrap">
             <div id="text">
                 <div id="nav">
-                    <button id="previous" onclick="previous();" style="float: left;">Trước</button>
-                    <button id="next" onclick="next();" style="float: right;" disabled !important >Sau</button>
+                    <button id="previous" class="btn-primary" onclick="previous();" style="float: left;">Trước</button>
+                    <button id="next" class="btn-primary" onclick="next();" style="float: right;" disabled !important >Sau</button>
                 </div><br>
                 <div id="code">
                     <p>This is placeholder</p>
