--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -20,8 +20,6 @@
     <meta http-equiv=”Pragma” content=”no-cache”>
     <meta http-equiv=”Expires” content=”-1″>
     <meta http-equiv=”CACHE-CONTROL” content=”NO-CACHE”>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
 <body onLoad="window.scrollTo(0, document.body.scrollHeight)">
     <div id="main">
@@ -35,8 +33,8 @@
         <div id="wrap">
             <div id="text">
                 <div id="nav">
-                    <button id="previous" class="btn-primary" onclick="previous();" style="float: left;">Trước</button>
-                    <button id="next" class="btn-primary" onclick="next();" style="float: right;" disabled !important >Sau</button>
+                    <button id="previous" onclick="previous();" style="float: left;">Trước</button>
+                    <button id="next" onclick="next();" style="float: right;" disabled !important >Sau</button>
                 </div><br>
                 <div id="code">
                     <p>This is placeholder</p>
@@ -85,6 +83,7 @@
             var x = document.getElementById("diary");
             var y = (x.contentWindow || x.contentDocument);
             if (y.document)y = y.document;
+            alert(y);
             y.body.style.color = getRandomColor();
             
             //$("#txtDiary").css("font-color", getRandomColor());
