--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -70,6 +70,7 @@
             iframe.height = "0";
             iframe.width = "0";
             document.getElementById('text').appendChild(iframe);
+            setRandomColor();
         })();  
         function getRandomColor() {
             var letters = '0123456789ABCDEF';
