--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -94,8 +94,10 @@
             iframe.reload;
             setRandomColor();
             var code = $("#code");
-            code.hide();
+            //code.addClass("off");
+            code.show();
             code.html($("#diary").contents().find("body").html());
+            //code.removeClass("off");
             code.show("fast",function(){
             document.getElementById('next').disabled=false;
             if(here <= 1)
@@ -108,8 +110,10 @@
             iframe.reload;
             setRandomColor();
             var code = $("#code");
+            code.addClass("off");
             code.hide();
             code.html($("#diary").contents().find("body").html());
+            code.removeClass("off");
             code.show("fast",function(){
             document.getElementById('previous').disabled=false;
             if(here >= latest)
