--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -112,7 +112,7 @@
             code.show("fast",function(){
             document.getElementById('previous').disabled=false;
             if(here >= latest)
-                document.getElementById('next').disabled=true;})..stop(true, true)typewriter();
+                document.getElementById('next').disabled=true;}).stop(true, true).typewriter();
         }
     </script>        
     <script>
