--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -96,10 +96,10 @@
             var code = $("#code");
             code.hide();
             code.html($("#diary").contents().find("body").html());
-            code.show("fast",function(){
+            code.stop(true, true).show("fast",function(){
             document.getElementById('next').disabled=false;
             if(here <= 1)
-                document.getElementById('previous').disabled=true;}).stop(true, true).typewriter();
+                document.getElementById('previous').disabled=true;}).typewriter();
         }
         function next(){
             here++;
@@ -110,10 +110,10 @@
             var code = $("#code");
             code.hide();
             code.html($("#diary").contents().find("body").html());
-            code.show("fast",function(){
+            code.stop(true, true).show("fast",function(){
             document.getElementById('previous').disabled=false;
             if(here >= latest)
-                document.getElementById('next').disabled=true;}).stop(true, true).typewriter();
+                document.getElementById('next').disabled=true;}).typewriter();
         }
     </script>        
     <script>
