--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -84,9 +84,9 @@
             iframe.reload;
             setRandomColor();
             var code = $("#code");
-            code.html('');
+            code.stop(true,false);
             code.html($("#diary").contents().find("body").html());
-            code.stop(true,true).show("fast",function(){
+            code.stop(true, true).show("fast",function(){
             document.getElementById('next').disabled=false;
             if(here <= 1)
                 document.getElementById('previous').disabled=true;}).typewriter();
@@ -98,9 +98,9 @@
             iframe.reload;
             setRandomColor();
             var code = $("#code");
-            code.html('');
+            code.stop(true, false);
             code.html($("#diary").contents().find("body").html());
-            code.stop(true,true).show("fast",function(){
+            code.stop(true, true).show("fast",function(){
             document.getElementById('previous').disabled=false;
             if(here >= latest)
                 document.getElementById('next').disabled=true;}).typewriter();
