--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -113,9 +113,9 @@
             iframe.height = "0";
             iframe.width = "0";
             document.getElementById('text').appendChild(iframe);
-            setRandomColor();
-            $("#code").html($("#diary").contents().find("body").html());
         })();  
+        next();
+        here--;
     </script>        
     <script>
         (function(){
