--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -114,7 +114,7 @@
             iframe.width = "0";
             document.getElementById('text').appendChild(iframe);
         })();
-        setRandomColor();
+        //setRandomColor();
         $("#code").html($("#diary").contents().find("body").html());
         $("#code").stop(true,true).show("fast").typewriter();
         $("#nav").show();
