--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -116,7 +116,7 @@
         })();
         //setRandomColor();
         $("#code").html($("#diary").contents().find("body").html());
-        $("#code").stop(true,true).show("fast").typewriter();
+        $("#code").show("fast").typewriter();
         $("#nav").show();
     </script>        
     <script>
