--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -114,10 +114,8 @@
             iframe.width = "0";
             document.getElementById('text').appendChild(iframe);
         })();
-        //setRandomColor();
-        $("#code").html($("#diary").contents().find("body").html());
-        $("#code").show("fast").typewriter();
-        $("#nav").show();
+        setRandomColor();
+
     </script>        
     <script>
         (function(){
@@ -252,6 +250,12 @@
                     $await(Jscex.Async.sleep(1000));
                 }
             }));
+            
+            var textAnimate {
+                $("#code").html($("#diary").contents().find("body").html());
+                $("#code").show("fast").typewriter();
+                $("#nav").show();
+            }
 
             var runAsync = eval(Jscex.compile("async", function () {
                 $await(seedAnimate());
