--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -86,7 +86,7 @@
             var code = $("#code");
             code.stop(true,false);
             code.html($("#diary").contents().find("body").html());
-            code.stop(true, true).show("fast",function(){
+            code.typewriter(true).show("fast",function(){
             document.getElementById('next').disabled=false;
             if(here <= 1)
                 document.getElementById('previous').disabled=true;}).typewriter();
@@ -100,8 +100,8 @@
             var code = $("#code");
             code.stop(true, false);
             code.html($("#diary").contents().find("body").html());
-            code.stop(true, true).show("fast",function(){
-            document.getElementById('previous').disabled=false;
+            code.show("fast",function(){
+            document.typewriter(true).getElementById('previous').disabled=false;
             if(here >= latest)
                 document.getElementById('next').disabled=true;}).typewriter();
         }
