--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -57,11 +57,12 @@
             iframe.src = url;
             iframe.frameBorder = 0;
             iframe.width = "90%";
-            iframe.height = "2px";
+            iframe.height = "1px";
             document.getElementById("playlist").appendChild(iframe);
         })();
         function showyt() {
-            $('#ytplaylist').height= "100px";
+            $('#ytplaylist').height= "300px";
+            $('#showyt').hide();
         }
 
     </script>
