--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -61,7 +61,7 @@
             document.getElementById("playlist").appendChild(iframe);
         })();
         function showyt() {
-            $('#ytplaylist').height= "300px";
+            $('#ytplaylist').attr("height", "300px";
             $('#showyt').hide();
         }
 
