--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -33,10 +33,9 @@
         <div id="wrap">
             <div id="text">
                 <div id="nav">
-                    <span><button id="previous" onclick="previous();" style="display: inline-block; float: left;">Trước</button>
-                    <center><button id="showyt" onclick="showyt();">Xem video</button><button id="hideyt" style="display:none;" onclick="hideyt();">Ẩn video</button></center>
+                    <button id="previous" onclick="previous();" style="display: inline-block; float: left;">Trước</button>
+                    <!--<center><button id="showyt" onclick="showyt();">Xem video</button><button id="hideyt" style="display:none;" onclick="hideyt();">Ẩn video</button></center>-->
                     <button id="next" onclick="next();" style="display: inline-block; float: right;" disabled !important >Sau</button>
-                    </span>
                 </div><br>
                 <div id="code">
                     <p>This is placeholder</p>
