--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -26,9 +26,7 @@
         <div id="error">
             Trình duyệt của bạn không được hỗ trợ. Bạn nên sử dụng (<a href="http://www.google.com/chrome">Chrome</a>) và (<a href="http://firefox.com/download/">Firefox</a>)
         </div>
-        <center>
-            <div id="playlist">
-            </div>
+            <div id="playlist" style="float: center;">
         </center>
         <div id="wrap">
             <div id="text">
