--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -34,7 +34,7 @@
             <div id="text">
                 <div id="nav">
                     <button id="previous" onclick="previous();" style="display: inline-block; float: left;">Trước</button>
-                    <!--<center><button id="showyt" onclick="showyt();">Xem video</button><button id="hideyt" style="display:none;" onclick="hideyt();">Ẩn video</button></center>-->
+                    <center><button id="showyt" onclick="showyt();" style="display: inline-block;">Xem video</button></center>
                     <button id="next" onclick="next();" style="display: inline-block; float: right;" disabled !important >Sau</button>
                 </div><br>
                 <div id="code">
